Style: Fixed alignment issue

--- a/src/components/elements/ScheduleCard/ScheduleCard.module.css
+++ b/src/components/elements/ScheduleCard/ScheduleCard.module.css
@@ -11,13 +11,12 @@
 }
 
 .rightContent {
-  padding: 2rem 0;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   flex: 1;
-  max-width: 100%;
   width: 100%;
-  align-items: center;
 }
 
 .imageWrapper {
@@ -33,11 +32,10 @@
 .timeTable {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
   border-radius: 10px;
+  max-width: 90%;
+  width: 100%;
 }
 
 .row {
